src/components/Navbar/index.scss
@import "../../styles/_variables";
@import "../../styles/_fonts";

.hamburger{
  display: block;
  margin-top: 0em;
  font-size: 2em;
}

.navbar-cross{
  display: block;
  font-size: 4em;
  margin-top: -0.2em;
}

#navbar{
  overflow: hidden;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 100;
  text-align: center;
  font-family: $font-title;
  font-size: 100%;
  letter-spacing: 1.4px;
  text-transform: uppercase;


  >.hidden{
      display: none;
  }

  .menu-wrapper {
    background-color: $licorice;
    width : 100%;
    //border-bottom-left-radius: 10px;
    //border-bottom-right-radius: 10px;
    display: inline-block;
    padding-top: 10px;
    padding-bottom: 10px;

    .menu-hamburger{
        display:none;
    }

    .menu{
      a {
        display: inline-block;
        border-right: 1px white solid;
        text-decoration: none;
        transition: color 0.4s;
        color: $text-color-light;
        padding: 5px 20px;
        &:hover{
          color: $melon !important;
          border-right: 1px solid white !important;
        }
      }
      .active-page {
        //color: $melon !important;
      }
      a:last-child{border-right: 0 !important;}
    }
  }
}


@media screen and (max-width: 1200px) {
  #navbar{
      font-size: 1.2em;
  }
}

@media screen and (max-width: $breakpoint-mobile-flipped) {
  
  #navbar{
				overflow: hidden;
        position: absolute;

        .menu-wrapper {
            width: 100%;
            
            .visible {
              height: 100vh;
            }

            .menu-hamburger{
                text-align: right;
                margin-right: 1em;
                display: block;
                overflow: auto;
            }

						.white {
							color: white;
						}

						.black {
							color: white;
						}

            .menu{
                display: flex;
                flex-direction: column;
                text-align: center;
                line-height: 1.8;
                font-size: 1.5em;
                .active-page {
                  //color: black !important;
                  &:hover{
                    //color: black !important;
                  }
                }
                a {
                    color: white !important;
                    border-right: none !important;
                    &:hover{
                      color: white !important;
                      text-decoration: underline !important;
                      border-right: none !important;
                    }
                }
                a:last-child{border-bottom: 0 !important;}
            }

            .hidden {
                display: none;
            }

        }

        .menu-wrapper.hidden {
            background-color: transparent;
            text-align: center;
            display: inline-block;
        }

        .menu-wrapper.visible{
            background-color: #00D790;
        }
    }

}

